# durtal

./: .env.example  .gitignore  .pnpm-approve-builds.json  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  drizzle.config.ts  flake.nix  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
changelog/: 0001_TASK_location-address-input.md  0002_TASK_schema-languages-countries-reference-tables.md  0003_TASK_schema-work-types-contribution-types.md  0004_TASK_schema-centuries-reference-validation.md  0005_TASK_schema-sources-table.md  0006_TASK_schema-series-table.md  0007_TASK_schema-publishing-houses.md  0008_TASK_schema-extend-authors.md  0009_TASK_schema-book-categories.md  0010_TASK_schema-literary-movements.md  0011_TASK_schema-themes.md  0012_TASK_schema-art-types-art-movements.md  0013_TASK_schema-keywords-attributes.md  0014_TASK_schema-extend-subjects.md  0015_TASK_ingest-reference-data.md  0016_TASK_ingest-taxonomy-data.md  0017_TASK_ingest-publishing-houses.md  0018_TASK_ingest-people-to-authors.md  0019_TASK_ingest-books-inventory.md  0020_TASK_ingest-occult-library.md  0021_TASK_ingest-book-editions.md  0022_TASK_ingest-book-series.md  0023_TASK_ui-series-navigation-main-page.md  0024_TASK_complete-add-book-wizard.md  0024_TASK_taxonomy-catalogue-status-acquisition-priority.md  0024b_TASK_taxonomy-catalogue-status-acquisition-priority.md  0025_TASK_taxonomy-instance-lifecycle-disposition.md  0026_TASK_taxonomy-derived-ownership-computation.md  0027_TASK_ui-authors-page-feature-parity.md  0028_TASK_design-system-consolidation.md  0029_TASK_human-readable-url-slugs.md  0030_TASK_book-detail-rich-metadata-display.md  0031_TASK_work-editing-ui.md  0032_TASK_taxonomy-management-on-book-detail.md  (+58 more)
(+342 files in other folders)
